crates/agent/src/integration_tests/snapshots/agent__integration_tests__schema_evolution__after-materializeMixed-retry.snap
---
source: crates/agent/src/integration_tests/schema_evolution.rs
expression: mixed_state.live_spec
---
materialization:
  onIncompatibleSchemaChange: disableTask
  endpoint:
    connector:
      image: "ghcr.io/estuary/materialize-postgres:dev"
      config:
        "$serde_json::private::RawValue": "{}"
  bindings:
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"pasture\"}"
      source: goats/pasture
      disable: true
      fields:
        recommended: true
      onIncompatibleSchemaChange: disableBinding
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"totes\"}"
      source: goats/totes
      fields:
        recommended: true
      onIncompatibleSchemaChange: abort
