crates/agent/src/integration_tests/snapshots/agent__integration_tests__schema_evolution__after-totes-initial-schema.snap
---
source: crates/agent/src/integration_tests/schema_evolution.rs
expression: specs
---
goats/materializeBackfill:
  endpoint:
    connector:
      image: "ghcr.io/estuary/materialize-postgres:dev"
      config:
        "$serde_json::private::RawValue": "{}"
  bindings:
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"pasture\"}"
      source: goats/pasture
      fields:
        recommended: true
      backfill: 1
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"totes\"}"
      source: goats/totes
      fields:
        recommended: true
goats/materializeDisableBinding:
  onIncompatibleSchemaChange: disableBinding
  endpoint:
    connector:
      image: "ghcr.io/estuary/materialize-postgres:dev"
      config:
        "$serde_json::private::RawValue": "{}"
  bindings:
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"pasture\"}"
      source: goats/pasture
      disable: true
      fields:
        recommended: true
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"totes\"}"
      source: goats/totes
      fields:
        recommended: true
goats/materializeMixed:
  onIncompatibleSchemaChange: disableTask
  endpoint:
    connector:
      image: "ghcr.io/estuary/materialize-postgres:dev"
      config:
        "$serde_json::private::RawValue": "{}"
  bindings:
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"pasture\"}"
      source: goats/pasture
      disable: true
      fields:
        recommended: true
      onIncompatibleSchemaChange: disableBinding
    - resource:
        "$serde_json::private::RawValue": "{\"table\":\"totes\"}"
      source: goats/totes
      fields:
        recommended: true
      onIncompatibleSchemaChange: abort
